# DukeDiffUNet

./: .gitignore  Pipfile  logs.md  pyproject.toml  requirements.txt  todo.md
configs/: base.yaml
configs/diffunet_v2/: base.yaml  config.yaml
configs/experiments/: diffunet.yaml  diffunet_colon.yaml  diffunet_colon_inference.yaml  diffunet_inference.yaml  medsegdiff.yaml  medsegdiff_inference.yaml  segdiff.yaml  template.yaml
configs/ldm/: base.yaml  config.yaml
data/3d_vlsm_v2/: label_map.json
data/json/: PET.jsonl  PET_val.jsonl  abdomen_1k.jsonl  abdomen_1k_test.jsonl  abdomen_1k_test_updated.jsonl  abdomen_1k_train.jsonl  abdomen_1k_train_updated.jsonl  abdomen_1k_val.jsonl  abdomen_1k_val_updated.jsonl
inference/: changes.md  diffunet_1_0.py  diffunet_1_1.py  diffunet_2_0.py  medsegdiff_1_0.py
model/imgcond/: __init__.py
model/medsegdiffv2/: __init__.py
model/segdiff/: RRDB.py  __init__.py  gaussian_diffusion.py  metrics.py  sampling_util.py  script_util.py  unet.py
notebook/: abdomen-1kdataprep.ipynb  colon_dataprep.ipynb  diffusion_dataprep.ipynb  pca.py  try_convex_hull.ipynb
notebook/tmp/: diffusion_dataprep_shapes.txt
scripts/: aim_ui.sh  kill_ldm.sh  kill_training.sh  kill_val.sh  train.sh  train_colon.sh  train_ldm.sh  trainv2.sh  val.sh  valv2.sh
tests/diffunet_v2/: conftest.py  (+2 more)
train/: diffunet_1_0.py  diffunet_1_1.py  diffunet_2_0.py  genPhantom10_1_9_train.py  ldm_1_0.py  medsegdiff_1_0.py  medsegdiff_1_1.py  segdiff_1_0.py
utils/: __init__.py  loss.py  monai_helpers.py  monai_transforms.py  profiling.py  visualize.py
(+13 files in other folders)
